# room-radio

./: .gitignore  README.md  architecture.md  pyproject.toml  radio_start.sh  start.sh
src/backend/: main.py
src/backend/api/: rooms.py  upload.py
src/backend/models/: room.py
src/backend/websocket/: room_manager.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: CreateRoom.tsx  FileUpload.tsx  RoomList.tsx  RoomPlayer.tsx
src/frontend/src/hooks/: useRoomSocket.ts
src/frontend/src/services/: api.ts
src/frontend/src/stores/: roomStore.ts
